# GrapplingArcAnalytics

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  FINDINGS.md  HANDOFF.md  README.md  build_url_mapping.py  fix_yt_urls.py  opencode.json  pyproject.toml  url_mapping.json
admin/: __init__.py  auth.py  server.py
alembic/: env.py
analysis/: __init__.py  archetype.py  athlete_elo.py  athlete_graph.py  athlete_systems.py  belt_analysis.py  benchmark.py  canonicalize.py  counter_moves.py  date_reconcile.py  decision_space.py  defense_rate.py  deviance.py  discipline.py  elo_calibration.py  embeddings.py  event_profile.py  fighter_similarity.py  gnn_predictor.py  graph_comparison.py  graph_embed.py  grapplemap_suggestions.py  grappling_map.py  insights.py  match_deviance.py  merge_attempt_nodes.py  merge_technique_dups.py  metric_evaluation.py  names.py  network_metrics.py  ocean.py  path_to_victory.py  priors.py  pro_analytics.py  rerank.py  similarity.py  style_profile.py  systems.py  technique_freq.py  technique_match.py  (+4 more)
cv/: __init__.py  baseline_classifier.py  inference.py  pose_estimate.py  pose_features.py  roboflow_classifier.py  roboflow_labels.py  segmenter.py  vicos_download.py  vicos_explore.py  vocab_map.py
db/: __init__.py  auth_setup.sql  base.py  ingest.py  models.py  ontology_repository.py  repository.py  scraped_import.py
docs/: PRO_ANALYTICS_HANDOFF.md  TAXONOMY_PLAN.md  canonicalization_report.json  canonicalization_report.md  date_reconcile_report.json  dump_validation_report.md  graph_analysis_approaches.md  ingestion_pipeline.md  match_event_model.md  metric_value_report.md  path_to_victory.md  publishing.md  qa_implementation_plan.md  realtime_cv_design.md  taxonomy.json  tech_library_refinement.md  user-graphs-postgres-persist-plan.md
elo_rankings/: README.md
export/: __init__.py  adcc_elo_table.py  athlete_graph_export.py  benchmark_results.py  grapplemap_icons_export.py  grappling_map.py  incremental.py  match_breakdown.py  narrative.py  ontology.py  site_data.py  tech_library.py
grapplemap/: __init__.py  align.py  cv_export.py  icons.py  parser.py
harvest/: __init__.py  __main__.py  harvester.py  prompt.txt  transcripts.py
jobs/: __init__.py  publish_pro_analytics.py
kanban/: Board.md  README.md  _template.md
notebooks/: 01_position_network.ipynb
pipelines/: __init__.py  adcc_fighters.py  adcc_historical.py  bjjheroes.py  etl.py  grappling_techniques.py  registry.py
realtime/: __init__.py  app.py  capture.py  export.py  server.py
schemas/: __init__.py  app_types.py
scripts/: adcc2022_99kg_data.py  adcc_trials2023_ec_semis_data.py  apply_events.py  apply_video_fixes.py  assign_user_archetypes.py  backfill_clf_meta.py  batch_queue.py  cji2day1_data.py  cji_data.py  clean_match_techniques.py  convert_dump.py  dedupe_athletes.py  detect_anomalies.py  dump_import.py  eddie_bravo_invitational_14_the_absolutes_data.py  ethan_crelinsten_data.py  gordon_matches.py  ibjjf2025_top10_data.py  insert_cji.py  insert_ethan_matches.py  insert_gordon_matches.py  insert_khabib.py  insert_mma_matches.py  insert_ufc_card.py  insert_ufc_matches.py  insert_wno31.py  khabib_data.py  leandro_lo_data.py  ncaa2026_data.py  pgf_world_2026_week_1_opening_day_data.py  pgf_world_2026_week_3_this_marks_the_halfway_point_data.py  pgf_world_2026_week_5_regular_season_finale_data.py  polaris30_data.py  polaris31_data.py  polaris33_data.py  polaris34_data.py  polaris35_data.py  polaris4_data.py  polaris_18_submission_grappling_full_bjj_event_replay_data.py  polaris_25_prelims_live_full_no_gi_bjj_grappling_undercard_data.py  (+20 more)
snapshots/: breakdowns.txt  ethan-krellstein.txt  events-verified.txt  events.txt  gordon-ryan.txt  grapple-gordon-ryan.txt  (+5 more)
(+244 files in other folders)
