[project]
name = "grappling-arc-analytics"
version = "0.1.0"
description = "Analytics module for GrapplingArc — data pipelines, ELO calibration, CV investigation, and pro benchmarking"
authors = [
    { name = "GrapplingArc", email = "dev@grapplingarc.app" },
]
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    # Core data
    "pandas>=2.2",
    "numpy>=2.0",
    "pyarrow>=17",

    # Kaggle integration
    "kagglehub[pandas-datasets]>=1.0",

    # Web scraping (BJJ Heroes)
    "aiohttp>=3.9",
    "beautifulsoup4>=4.12",
    "nest-asyncio>=1.6",

    # ML
    "scikit-learn>=1.5",
    "xgboost>=2.1",

    # Viz
    "matplotlib>=3.9",
    "seaborn>=0.13",

    # Notebooks
    "jupyter>=1.0",

    # CV (pose → position)
    "opencv-python>=4.10",
    "pillow>=10.4",

    # Utils
    "python-dotenv>=1.0",
    "requests>=2.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.11",
    "pre-commit>=3.8",
    "fastapi>=0.115",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "qdrant-client>=1.11",
]
cv = [
    "torch>=2.3",
    "torchvision>=0.18",
    "ultralytics>=8.2",
    "onnxruntime>=1.18",
    # The Roboflow backend (cv/roboflow_classifier.py) calls the hosted serverless
    # HTTP API via `requests` (a core dep) — no extra install needed. A self-hosted
    # `inference` server is optional (point RoboflowClassifier.api_url at it).
]
realtime = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "qdrant-client>=1.11",
]
viz = [
    "plotly>=5.24",
    "ipywidgets>=8.1",
]

[project.urls]
Repository = "https://github.com/vetor/GrapplingArcAnalytics"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = ["notebooks/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
